# slim

./: docker-bake.hcl
charts/slim/: values.yaml
charts/slim/templates/: configmap.yaml  deployment.yaml
data-plane/: Dockerfile
data-plane/bindings/rust/: Cargo.toml
data-plane/bindings/rust/src/: lib.rs  slimrpc.rs
data-plane/bindings/rust/src/slimrpc/: channel.rs  context.rs  error.rs  rpc_session.rs  server.rs  session_wrapper.rs  stream_types.rs
data-plane/bindings/rust/tests/: slimrpc_core.rs  slimrpc_e2e.rs  slimrpc_multicast.rs
data-plane/config/base/: server-config.yaml
data-plane/core/auth/src/: builder.rs  jwt.rs  jwt_middleware.rs
data-plane/core/config/src/auth/: jwt.rs
data-plane/core/config/tests/: e2e.rs
data-plane/core/controller/src/: config.rs  service.rs
data-plane/core/datapath/src/: message_processing.rs
data-plane/core/datapath/src/tables/: subscription_table.rs
data-plane/core/mls/src/: identity_provider.rs
data-plane/core/service/src/: app.rs  interceptor.rs  streaming.rs
data-plane/python-bindings/: Taskfile.yml  pyproject.toml
data-plane/python-bindings/slim_bindings/: _slim_bindings.pyi
data-plane/python-bindings/src/: pyidentity.rs
data-plane/python-bindings/tests/: test_identity.py
demo/client/: Chart.yaml  values.yaml
demo/client/charts/: slim-client-0.1.0.tgz
demo/slim/: Chart.yaml  values.yaml
demo/slim/charts/: slim-0.1.8.tgz
demo/slim/templates/: cluster-spiffe-id.yaml
demo/spire/: cluster-spiffe-id.yaml  install.sh
demo/svid/: jwt.bundle  jwt1  jwt2
