[package]
name = "agntcy-slim-bindings"
version = "1.2.0"
edition = { workspace = true }
license = { workspace = true }
description = "UniFFI bindings and FFI adapter for SLIM data plane - enables language integrations (Go, Swift, Kotlin, etc.)"

[lib]
name = "slim_bindings"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# Local workspace dependencies
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-service = { workspace = true, features = ["session"] }
agntcy-slim-session = { workspace = true }
agntcy-slim-signal = { workspace = true }
agntcy-slim-tracing = { workspace = true }

# External dependencies
async-stream = { workspace = true }
async-trait = { workspace = true }
display-error-chain = { workspace = true }
drain = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }
uuid = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
agntcy-slim-testing = { workspace = true }
bincode = { workspace = true }
test-fork = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true }
